--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-p{
+/* p{
     color: blueviolet;
     background-color: chartreuse;
     text-align: center;
@@ -62,4 +62,4 @@ body{
 
 #title {
     color: brown;
-}   
+}    */
