--- a/flexbox.css
+++ b/flexbox.css
@@ -1,19 +1,28 @@
 .container{
   display: flex;
-  background-color: lightgray;
+  background-color:blueviolet;
   padding: 10px;
-  border: 1px solid red;
+  border: 1px solid black;
   height: 200px;
-  width: 880px;
-  flex-direction: column;
+  width: 600px;
+  /* flex-direction:column;*/
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  align-content: flex-end;
-}
+  gap: 20px 30px;
+  }
 
 .item{
     height: 50px;
-    width: 100;
-    background-color: rgb(rgb(180, 44, 44));
+    width: 100px;
+    background-color: blue;
+      flex-grow: 1;
+      flex-shrink: 3;
+    /* text-align: center; */
+    /* margin: 100px;; */
+}
+/* By default all the child elements have order 0 */
+.item4{
+  /* order: -1; */
+  align-self: flex-end;
 }
