--- a/flexbox.css
+++ b/flexbox.css
@@ -1,4 +1,4 @@
-.container{
+/* .container{
   display: flex;
   background-color:blueviolet;
   padding: 10px;
@@ -6,7 +6,7 @@
   height: 200px;
   width: 600px;
   /* flex-direction:column;*/
-  flex-wrap: wrap;
+  /* flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 20px 30px;
@@ -17,12 +17,12 @@
     width: 100px;
     background-color: blue;
       flex-grow: 1;
-      flex-shrink: 3;
+      flex-shrink: 3; */
     /* text-align: center; */
-    /* margin: 100px;; */
+    /* margin: 100px;;
 }
 /* By default all the child elements have order 0 */
-.item4{
+/* .item4{
   /* order: -1; */
-  align-self: flex-end;
-}
+  /* align-self: flex-end;
+/* } */
